echoserver/microgateway-echoserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microgateway-echoserver
  labels:
    app: microgateway-echoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microgateway-echoserver
  template:
    metadata:
      labels:
        app: microgateway-echoserver
    spec:
      imagePullSecrets:
        - name: dockerregcred
      containers:
      - name: microgateway-echoserver
        image: ergon/airlock-microgateway:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        volumeMounts:
        - name: config
          mountPath: /config/config.yaml
          subPath: config.yaml
        - name: secret
          mountPath: /secret/config/
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 90
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 30
      volumes:
      - name: config
        configMap:
          name: microgateway-echoserver-config
      - name: secret
        secret:
          secretName: microgateway-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: microgateway-echoserver
  labels:
    app: microgateway-echoserver
spec:
  selector:
    app: microgateway-echoserver
  ports:
    - name: http
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microgateway-echoserver
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /echo
        pathType: Prefix
        backend:
          service:
            name: microgateway-echoserver
            port: 
              number: 8080
